--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory( avi )
 add_subdirectory( ay8910 )
 add_subdirectory( bincfg )
 add_subdirectory( cfg )
+add_subdirectory( cheat )
 add_subdirectory( cp1600 )
 add_subdirectory( cp1600/tbl )
 add_subdirectory( dasm )
