Use real gnu readline (not the osx libhistory).
I may switch this back in the future, don't want too many external dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(jzintv)
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-variable_watch(CMAKE_BUILD_TYPE)
+#variable_watch(CMAKE_BUILD_TYPE)
 
 add_executable(jzintv src/cheat/cheat.c)
 
@@ -21,10 +21,20 @@ target_include_directories(jzintv
 
 link_directories(/Library/Frameworks/SDL.framework,  /usr/local/lib)
 
+find_path(Readline_ROOT_DIR
+        NAMES
+          include/readline/readline.h
+          include/readline/history.h
+        PATHS
+          /usr/local/opt/readline/ /opt/local/ /usr/local/ /usr/
+        NO_DEFAULT_PATH
+        )
+
 find_library(sdl_framework
         NAMES SDL
         HINT "/Library/Frameworks/SDL.framework"
         REQUIRED)
+
 
 #target_link_libraries(jzintv PUBLIC -framework SDL -framework AppKit -framework Foundation objc)
 target_link_libraries(jzintv
@@ -33,7 +43,8 @@ target_link_libraries(jzintv
           "-framework AppKit"
           "-framework Foundation"
           objc
-          readline
-          history
-          pcre2-8.a
+          /usr/local/lib/libreadline.a
+          /usr/local/lib/libhistory.a
+          /usr/local/lib/libpcre2-8.a
+          termcap
         )
